[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/localization_editor_plugin_g3/icons/icon-exclamation.svg" type="Texture" id=1]
[ext_resource path="res://addons/localization_editor_plugin_g3/multilang_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/localization_editor_plugin_g3/HBxItemTranslation.gd" type="Script" id=3]
[ext_resource path="res://addons/localization_editor_plugin_g3/icons/icon-language.svg" type="Texture" id=4]
[ext_resource path="res://addons/localization_editor_plugin_g3/icons/google-translate-svgrepo-com.svg" type="Texture" id=5]
[ext_resource path="res://addons/localization_editor_plugin_g3/icons/DeepL_Logo_darkBlue_v2.svg" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ItemTranslation" type="HBoxContainer"]
margin_right = 545.0
margin_bottom = 95.0
custom_constants/separation = 10
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="ButtonCopyKey" type="Button" parent="."]
margin_top = 31.0
margin_right = 32.0
margin_bottom = 63.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 4

[node name="IconNormal" type="TextureRect" parent="ButtonCopyKey"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 25, 0 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="IconAlert" type="TextureRect" parent="ButtonCopyKey"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 25, 0 )
texture = ExtResource( 1 )
stretch_mode = 4

[node name="VBxString1" type="VBoxContainer" parent="."]
margin_left = 42.0
margin_right = 545.0
margin_bottom = 95.0
size_flags_horizontal = 3

[node name="LblOriginalTxt" type="LineEdit" parent="VBxString1"]
unique_name_in_owner = true
margin_right = 503.0
margin_bottom = 23.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
editable = false

[node name="LblOriginalTxt0" type="Label" parent="VBxString1"]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
margin_top = 27.0
margin_right = 503.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "gdfgdfgdgd"
clip_text = true
max_lines_visible = 1

[node name="LineEditTranslation" type="LineEdit" parent="VBxString1"]
unique_name_in_owner = true
margin_top = 27.0
margin_right = 503.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Write a translation..."
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBxString1"]
margin_top = 64.0
margin_right = 503.0
margin_bottom = 92.0
custom_constants/separation = 11

[node name="LblKeyStr" type="Label" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.47451 )
margin_top = 7.0
margin_right = 158.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "ItemTranslation"
clip_text = true

[node name="BtnTranslate" type="Button" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
margin_left = 169.0
margin_right = 267.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
text = " Translate"
icon = ExtResource( 5 )

[node name="BtnTranslateDeepL" type="Button" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
margin_left = 278.0
margin_right = 306.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )

[node name="CheckBoxRevision" type="CheckBox" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
margin_left = 317.0
margin_right = 437.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
text = "Need Revision"

[node name="BtnEdit" type="Button" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
margin_left = 448.0
margin_right = 484.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
text = "Edit"

[node name="VSeparator" type="VSeparator" parent="VBxString1/HBoxContainer"]
margin_left = 495.0
margin_right = 503.0
margin_bottom = 28.0
custom_constants/separation = 8
custom_styles/separator = SubResource( 1 )

[connection signal="pressed" from="ButtonCopyKey" to="." method="_on_ButtonCopyKey_pressed"]
[connection signal="focus_entered" from="VBxString1/LineEditTranslation" to="." method="_on_LineEditTranslation_focus_entered"]
[connection signal="focus_exited" from="VBxString1/LineEditTranslation" to="." method="_on_LineEditTranslation_focus_exited"]
[connection signal="text_changed" from="VBxString1/LineEditTranslation" to="." method="_on_LineEditTranslation_text_changed"]
[connection signal="text_entered" from="VBxString1/LineEditTranslation" to="." method="_on_LineEditTranslation_text_entered"]
[connection signal="pressed" from="VBxString1/HBoxContainer/BtnTranslate" to="." method="_on_BtnTranslate_pressed"]
[connection signal="pressed" from="VBxString1/HBoxContainer/BtnTranslateDeepL" to="." method="_on_BtnTranslateDeepL_pressed"]
[connection signal="toggled" from="VBxString1/HBoxContainer/CheckBoxRevision" to="." method="_on_CheckBoxRevision_toggled"]
[connection signal="pressed" from="VBxString1/HBoxContainer/BtnEdit" to="." method="_on_BtnEdit_pressed"]
